--- a/index.html
+++ b/index.html
@@ -44,7 +44,17 @@
         <a href="tel:+79089096512" class="btn btn-reset btn_order">Заказать</a>
       </div>
     </section>
-
+    <section class="section__two">
+      <div class="section__two-container container flex">
+        <h2 class="section__two-header">Дополнительные услуги:</h2>
+        <ul class="section__two-list list-reset flex">
+          <li class="section__two-list-item img-item1">Доставка продуктов</li>
+          <li class="section__two-list-item img-item2">Доставка мелкогабаритных грузов</li>
+          <li class="section__two-list-item img-item3">Трезвый водитель</li>
+        </ul>
+        <a href="tel:+79221197134" class="btn btn-reset btn_order">Заказать</a>
+      </div>
+    </section>
   </main>
 
   <footer></footer>
