Исправлние мелкий недочетов

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="ru">
 
 <head>
+  <title>Дубровка Такси</title>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="Keywords" content="такси Дубровка, Дубровка, такси верхнее дуброво">
+  <meta name="description" content="Сервис по заказу такси">
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/media.css">
   <link rel="stylesheet" href="/css/normalize.css">
@@ -12,7 +15,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <title>Такси Дубровка</title>
 </head>
 
 <body>
@@ -21,7 +23,7 @@
       <a href="#" class="header__logo">
         <img class="header__logo-img" src="/image/logo.png" alt="logo">
       </a>
-      <h1 class="header__name">Такси Дубровка</h1>
+      <p class="header__name">Такси Дубровка</p>
       <ul class="header__phone list-reset flex">
         <li class="header__phone-list">
           <a href="tel:+79089096512" class="header__phone-item">+7 (908) 909-65-12</a>
@@ -35,11 +37,12 @@
 
   <main>
     <section class="section__one">
+      <h1 class="visually-hidden">Такси Дубровка</h1>
       <div class="section__one-container container flex">
         <img src="/image/skoda_a53431.png" class="section__one-img" alt="">
         <ul class="section__one-list list-reset flex">
           <li class="section__one-list-item">Такси в пределах населенного пункта</li>
-          <li class="section__one-list-item">Междугороднее такси</li>
+          <li class="section__one-list-item">Междугородное такси</li>
         </ul>
         <a href="tel:+79089096512" class="btn btn-reset btn_order">Заказать</a>
       </div>
