Подтверждение прав на сайт

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Keywords" content="такси Дубровка, Дубровка, такси верхнее дуброво">
   <meta name="description" content="Сервис по заказу такси">
+  <meta name="yandex-verification" content="92399c0d96a69209" />
   <link rel="stylesheet" href="/css/style.css">
   <link rel="stylesheet" href="/css/media.css">
   <link rel="stylesheet" href="/css/normalize.css">
