--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
   </noscript>
   <!-- /Yandex.Metrika counter -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="Keywords" content="такси Дубровка, Дубровка, такси верхнее дуброво">
+  <meta name="Keywords"
+    content="такси Дубровка, Дубровка, такси верхнее дуброво, такси, доставка, трезвый водитель, услуга трезвый водительы">
   <meta name="description" content="Сервис по заказу такси">
   <meta name="yandex-verification" content="92399c0d96a69209" />
   <link rel="stylesheet" href="/css/style.css">
