--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <link rel="stylesheet" href="/css/media.css">
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="shortcut icon" href="/image/logo.png" type="image/x-icon">
-  <link rel="icon" href="/image/favicon.ico" type="image/x-icon">
+  <link rel="icon" href="https://dubrovka-taksi.ru/favicon.ico" type="image/x-icon">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;800&display=swap" rel="stylesheet">
