--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
   <link rel="stylesheet" href="/css/normalize.css">
   <link rel="icon" href="/favicon.png" type="image/png">
   <link rel="shortcut icon" href="/image/logo.png" type="image/png">
+  <link rel="icon" sizes="192x192" href="/android-chrome.png">
   <link rel="apple-touch-icon" href="/apple-touch-icon.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
