--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <!-- /Yandex.Metrika counter -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="Keywords"
-    content="такси Дубровка, Дубровка, такси верхнее дуброво, такси, доставка, трезвый водитель, услуга трезвый водительы">
+    content="такси Дубровка, Дубровка, такси верхнее дуброво, такси, доставка, трезвый водитель, услуга трезвый водитель">
   <meta name="description" content="Сервис по заказу такси">
   <meta name="yandex-verification" content="92399c0d96a69209" />
   <link rel="stylesheet" href="/css/style.css">
@@ -67,7 +67,10 @@
       <div class="section__one-container container flex">
         <img src="/image/skoda_a53431.png" class="section__one-img" alt="">
         <ul class="section__one-list list-reset flex">
-          <li class="section__one-list-item">Такси в пределах населенного пункта</li>
+          <li class="section__one-list-item">Такси в пределах населенного пункта:</li>
+          <ol class="section__one-list-subitem">посёлок городского типа Верхнее Дуброво</ol>
+          <ol class="section__one-list-subitem">село Малобрусянское</ol>
+          <ol class="section__one-list-subitem">село Косулино</ol>
           <li class="section__one-list-item">Междугородное такси</li>
         </ul>
         <a href="tel:+79089096512" class="btn btn-reset btn_order">Заказать</a>
