Исправление мелких недочетов

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
       <div class="section__one-container container flex">
         <img src="/image/skoda_a53431.png" class="section__one-img" alt="">
         <ul class="section__one-list list-reset flex">
-          <li class="section__one-list-item">Такси в пределах населенного пункта:</li>
+          <li class="section__one-list-item">Такси в пределах населенного пункта</li>
           <ol class="section__one-list-subitem">посёлок городского типа Верхнее Дуброво</ol>
           <ol class="section__one-list-subitem">село Малобрусянское</ol>
           <ol class="section__one-list-subitem">село Косулино</ol>
