Внесение дополнений в сайт

--- a/index.html
+++ b/index.html
@@ -83,6 +83,7 @@
           <li class="section__two-list-item img-item1">Доставка продуктов</li>
           <li class="section__two-list-item img-item2">Доставка мелкогабаритных грузов</li>
           <li class="section__two-list-item img-item3">Трезвый водитель</li>
+          <li class="section__two-list-item img-item4">"Прикуривание" автомобиля</li>
         </ul>
         <a href="tel:+79221197134" class="btn btn-reset btn_order">Заказать</a>
       </div>
